Corrected color contrast and added missing labels

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body {
   padding: 0;
   text-align: center;
   font-family: 'Open Sans', sans-serif;
-  color: #5A9A84;
+  color: #74B49E;
   background: #2d2b30;
 }
 
